...
    return Form(
      key: widget.formKey,
      onChanged: _inputListener,
      child: Column(
        children: [
          SerManosEmailFormField(
            key: const Key('email-field'),
            onFieldSubmitted: widget.onFieldSubmitted,
            controller: _emailController,
            placeholder: 'Ingrese su email',
          ),
          const SerManosSizedBox.sm(),
          SerManosPasswordFormField(
            key: const Key('password-field'),
            onFieldSubmitted: widget.onFieldSubmitted,
            controller: _passwordController,
            placeholder: 'Ingrese su contraseña',
          ),
        ],
      ),
...
